fix contrast bug for 404 page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -945,8 +945,8 @@ input[type=reset] {
 .error_text button {
     padding: 2% 7%;
     border-radius: 5px;
-    background-color: #4CAF50;
-     color: #ffffff;
+    background-color: #12f01a;
+     color: #070707;
     text-decoration: none;
     font-size: larger;
     cursor: pointer;
